--- a/index.html
+++ b/index.html
@@ -7,10 +7,85 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="nav-link" id="logo"><a href="/">lego.js</a></div>
+            <div class="spacer"></div>
+            <div class="nav-link"><a href="docs">docs</a></div>
+            <div class="nav-link"><a href="examples">examples</a></div>
+            <div class="nav-link"><a href="http://github.com/tybenz/legojs">repo</a></div>
+        </nav>
+    </header>
+    <div id="main">
+        <h1>Hello</h1>
+
+<!--lorem-->
+<p>Tincidunt viverra justo. Cum sociis natoque penatibus et magnis dis
+    parturient montes, nascetur ridiculus mus. Sed eros ante, mattis
+    ullamcorper, posuere quis, tempor vel, metus. Maecenas cursus cursus lacus.
+    Sed risus magna, aliquam sed, suscipit sit amet, porttitor quis, odio.
+    Suspendisse cursus justo nec urna. Suspendisse potenti. In hac habitasse
+    platea dictumst. Cras quis lacus. Vestibulum rhoncus congue lacus. Vivamus
+    euismod, felis quis commodo viverra, dolor elit dictum ante, et mollis eros
+    augue at est. Class aptent taciti sociosqu ad litora torquent per conubia
+    nostra, per inceptos himenaeos. Nulla lectus sem, tristique sed, semper in,
+    hendrerit non, sem. Vivamus dignissim massa in ipsum. Morbi fringilla
+    ullamcorper ligula. Nunc turpis. Mauris vitae sapien. Nunc luctus bibendum
+    velit.</p>
+
+<p>Morbi faucibus volutpat sapien. Nam ac mauris at justo adipiscing facilisis.
+    Nunc et velit. Donec auctor, nulla id laoreet volutpat, pede erat feugiat
+    ante, auctor facilisis dui augue non turpis. Suspendisse mattis metus et
+    justo. Aliquam erat volutpat. Suspendisse potenti. Nam hendrerit lorem
+    commodo metus laoreet ullamcorper. Proin vel nunc a felis sollicitudin
+    pretium. Maecenas in metus at mi mollis posuere. Quisque ac quam sed massa
+    adipiscing rutrum. Vestibulum ipsum. Phasellus porta sapien. Maecenas
+    venenatis tellus vel tellus.</p>
+
+<p>Aliquam aliquam dolor at justo. Cum sociis natoque penatibus et magnis dis
+    parturient montes, nascetur ridiculus mus. Morbi pretium purus a magna.
+    Nullam dui tellus, blandit eu, facilisis non, pharetra consectetuer, leo.
+    Maecenas sit amet ante sagittis magna imperdiet pulvinar. Vestibulum a
+    lacus at sapien suscipit tempus. Proin pulvinar velit sed nulla. Curabitur
+    aliquet leo ac massa. Praesent posuere lectus vitae odio. Donec imperdiet
+    urna vel ante. In semper accumsan diam. Vestibulum porta justo. Suspendisse
+    egestas commodo eros.</p>
+
+<p>Suspendisse tincidunt mi vel metus. Vivamus non urna in nisi gravida congue.
+    Aenean semper orci a eros. Praesent dictum. Maecenas pharetra odio ut dui.
+    Pellentesque ut orci. Sed lobortis, velit at laoreet suscipit, quam est
+    sagittis nibh, id varius ipsum quam ac metus. Phasellus est nibh, bibendum
+    non, dictum sed, vehicula in, sem. Vestibulum ante ipsum primis in faucibus
+    orci luctus et ultrices posuere cubilia Curae; Mauris sollicitudin. Duis
+    congue tincidunt orci. Integer blandit neque ut quam. Morbi mollis. Integer
+    lacinia. Praesent blandit elementum sapien. Praesent enim mauris, suscipit
+    a, auctor et, lacinia vitae, nunc. Pellentesque habitant morbi tristique
+    senectus et netus et malesuada fames ac turpis egestas. Praesent lacus
+    diam, auctor quis, venenatis in, hendrerit at, est. Vivamus eget eros.
+    Phasellus congue, sapien ac iaculis feugiat, lacus lacus accumsan lorem,
+    quis volutpat justo turpis ac mauris.</p>
+
+<p>Duis velit magna, scelerisque vitae, varius ut, aliquam vel, justo. Proin ac
+    augue. Nullam auctor lectus vitae arcu. Vestibulum porta justo placerat
+    purus. Ut sem nunc, vestibulum nec, sodales vitae, vehicula eget, ipsum.
+    Sed nec tortor. Aenean malesuada. Nunc convallis, massa eu vestibulum
+    commodo, quam mauris interdum arcu, at pellentesque diam metus ut nulla.
+    Vestibulum eu dolor sit amet lacus varius fermentum. Morbi dolor enim,
+    pulvinar eget, lobortis ac, fringilla ac, turpis. Duis ac erat. Etiam
+    consequat. Integer sed est eu elit pellentesque dapibus. Duis venenatis
+    magna feugiat nisi. Vestibulum et turpis. Maecenas a enim. Suspendisse.</p>
+<!--/lorem-->
+
+    </div>
+    <footer>
+        <nav>
+            <div class="nav-link">&copy; Tyler Benziger 2014</div>
+            <div class="nav-link"><a href="http://thenounproject.com/term/lego/3435/" target="_blank">Lego by Jon Trillana from The Noun Project</a></div>
+        </nav>
+    </footer>
     <script type="text/javascript" charset="utf-8" data-main="src/main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
