--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 <body>
     <header>
         <nav>
-            <div class="nav-link" id="logo"><a href="/">lego.js</a></div>
+            <div class="nav-link" id="logo"><a href="/" class="active">lego.js</a></div>
             <div class="spacer"></div>
-            <div class="nav-link"><a href="docs">docs</a></div>
+            <div class="nav-link toggle-dropdown"><a href="docs">docs</a></div>
             <div class="nav-link"><a href="examples">examples</a></div>
             <div class="nav-link"><a href="http://github.com/tybenz/legojs">repo</a></div>
         </nav>
     </header>
+    <div class="slideout-wrapper">
+        <div class="slideout">
+            <div class="spacer-left"></div>
+            <div class="nav-link"><a href="docs/tabs">tabs</a></div>
+            <div class="nav-link"><a href="docs/draggable">draggable</a></div>
+            <div class="nav-link"><a href="docs/spinner">spinner</a></div>
+            <div class="nav-link"><a href="docs/flyout">flyout</a></div>
+            <div class="spacer-right"></div>
+        </div>
+    </div>
     <div id="main">
         <h1>Hello</h1>
 
