Whole bunch of stuff

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     </div>
     <footer>
         <nav>
-            <div class="nav-link">&copy; Tyler Benziger 2014</div>
-            <div class="nav-link"><a href="http://thenounproject.com/term/lego/3435/" target="_blank">Lego by Jon Trillana from The Noun Project</a></div>
+            <div>&copy; Tyler Benziger 2014</div>
+            <div><a href="http://thenounproject.com/term/lego/3435/" target="_blank">Lego by Jon Trillana from The Noun Project</a></div>
         </nav>
     </footer>
     <script type="text/javascript" charset="utf-8" data-main="src/main" src="bower_components/requirejs/require.js"></script>
