--- a/examples/spinner/index.html
+++ b/examples/spinner/index.html
@@ -7,7 +7,7 @@
     <link href='../css/styles.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <h1>Lego.js Tabs Example</h1>
+  <h1>Lego.js Numeric Spinner Example</h1>
 
   <div class="numeric-spinner-wrapper">
     <div class="buttons">
