Forgot href on flyout demo

--- a/examples/flyout/index.html
+++ b/examples/flyout/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Lego.js Flyout Example</h1>
 
-  <a class="trigger">Open Flyout</a>
+  <a href="#" class="trigger">Open Flyout</a>
   <div class="flyout">
     This is a flyout
   </div>
