--- a/examples/slider/index.html
+++ b/examples/slider/index.html
@@ -9,10 +9,28 @@
 <body>
   <h1>Lego.js Slider Example</h1>
 
-  <input class="slider-value">
-  <div class="slider">
-    <div class="thumb"></div>
+  <div class="slider-example">
+    <input class="slider-value-horizontal">
+    <div class="slider horizontal">
+      <div class="thumb"></div>
+    </div>
   </div>
+
+  <div class="slider-example">
+    <input class="slider-value-vertical">
+    <div class="slider vertical">
+      <div class="thumb"></div>
+    </div>
+  </div>
+
+  <div class="slider-example">
+    <input class="slider-value-2d-x">
+    <input class="slider-value-2d-y">
+    <div class="slider two-dimensional">
+      <div class="thumb"></div>
+    </div>
+  </div>
+
   <script data-main="../../src/main.js" src="../../node_modules/requirejs/require.js"></script>
 </body>
 </html>
